--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
+    "crypto-js": "^3.1.9-1",
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eventsource-polyfill": "^0.9.6",
@@ -33,7 +34,6 @@
     "glob": "^7.1.2",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "js-sha256": "^0.9.0",
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
     "mpvue-loader": "^1.0.12",
