--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wx-mpvue",
+  "name": "wx-mpvue-demo",
   "version": "1.0.0",
   "description": "A Mpvue project",
   "author": "Mondo <568197478@qq.com>",
@@ -7,14 +7,17 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "rimraf dist && node build/build.js"
+    "build": "rimraf dist && node build/build.js",
+    "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "mpvue": "^1.0.9",
+    "mpvue": "^1.0.10",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "^8.4.1",
     "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
@@ -23,9 +26,15 @@
     "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "crypto-js": "^3.1.9-1",
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^3.0.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
@@ -34,10 +43,8 @@
     "glob": "^7.1.2",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "less": "^3.0.2",
-    "less-loader": "^4.1.0",
-    "mpvue-loader": "^1.0.12",
-    "mpvue-template-compiler": "^1.0.9",
+    "mpvue-loader": "^1.0.13",
+    "mpvue-template-compiler": "^1.0.10",
     "mpvue-webpack-target": "^1.0.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
@@ -53,7 +60,7 @@
     "vue-style-loader": "^3.0.1",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware-hard-disk": "^1.10.0",
+    "webpack-dev-middleware-hard-disk": "^1.10.1",
     "webpack-merge": "^4.1.0",
     "webpack-mpvue-asset-plugin": "^0.0.1"
   },
