--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "glob": "^7.1.2",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
     "mpvue-loader": "^1.0.13",
     "mpvue-template-compiler": "^1.0.10",
     "mpvue-webpack-target": "^1.0.0",
