新增滑动删除组件

--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"miniprogramRoot": "./dist/",
 	"compileType": "miniprogram",
-	"appid": "",
+	"appid": "touristappid",
 	"projectname": "wx-demo",
 	"condition": {
 		"search": {
