--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wx-mpvue-demo",
+  "name": "wx-mpvue",
   "version": "1.0.0",
   "description": "A Mpvue project",
   "author": "Mondo <568197478@qq.com>",
@@ -7,64 +7,56 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "rimraf dist && node build/build.js",
-    "lint": "eslint --ext .js,.vue src"
+    "build": "node build/build.js"
   },
   "dependencies": {
-    "mpvue": "^1.0.10",
-    "vuex": "^2.3.1"
+    "mpvue": "^1.0.11",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^8.4.1",
+    "autoprefixer": "^9.1.0",
     "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
+    "chalk": "^2.4.0",
     "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^3.0.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
-    "friendly-errors-webpack-plugin": "^1.1.3",
+    "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.2",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "less": "^3.0.4",
+    "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.18.0",
+    "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "mpvue-loader": "^1.0.13",
-    "mpvue-template-compiler": "^1.0.10",
+    "mpvue-loader": "1.0.13",
+    "mpvue-template-compiler": "^1.0.11",
     "mpvue-webpack-target": "^1.0.0",
-    "optimize-css-assets-webpack-plugin": "^2.0.0",
-    "ora": "^1.2.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^2.0.0",
     "portfinder": "^1.0.13",
-    "postcss-loader": "^2.0.6",
+    "postcss-loader": "^2.1.4",
     "postcss-mpvue-wxss": "^1.0.0",
-    "px2rpx-loader": "^0.1.8",
+    "prettier": "~1.12.1",
+    "px2rpx-loader": "^0.1.10",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "url-loader": "^0.5.8",
-    "vue-style-loader": "^3.0.1",
-    "webpack": "^2.6.1",
+    "shelljs": "^0.8.1",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "url-loader": "^1.0.1",
+    "vue-style-loader": "^4.1.0",
+    "webpack": "^3.11.0",
     "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware-hard-disk": "^1.10.1",
+    "webpack-dev-middleware-hard-disk": "^1.12.0",
     "webpack-merge": "^4.1.0",
-    "webpack-mpvue-asset-plugin": "^0.0.1"
+    "webpack-mpvue-asset-plugin": "0.0.2"
   },
   "engines": {
     "node": ">= 4.0.0",
